--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==3.0.0
-scikit-learn==1.3.2
-pandas==2.1.4
+Cython>=0.29
 numpy==1.26.2
+pandas==2.1.4
+scikit-learn==1.2.2
+Flask==3.0.0
 joblib==1.3.2
 urllib3==2.1.0
